--- a/index.html
+++ b/index.html
@@ -1,64 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Website Streaming Anime</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Anime Recommendation</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Anime Streaming</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Beranda</a></li>
-                <li><a href="#">Genre</a></li>
-                <li><a href="#">Daftar Tonton</a></li>
-                <li><a href="#">Profil</a></li>
-            </ul>
-        </nav>
+        <div class="navbar">
+            <span class="logo">AnimeKu</span>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Search</a></li>
+                    <li><a href="#">Popular</a></li>
+                    <li><a href="#">Profile</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-    <main>
-        <section class="hero">
-            <div class="hero-content">
-                <h2>Halo, [Nama Pengguna]!</h2>
-                <p>Nonton apa hari ini?</p>
+    <section class="greeting-section">
+        <p class="greeting">Hi Rustaman!</p>
+        <p class="subtitle">Nonton apa hari ini?</p>
+    </section>
+
+    <section class="recommendations">
+        <h2>Terbaik bersama keluarga</h2>
+        <div class="anime-cards">
+            <div class="card">
+                <img src="spy-family.jpg" alt="Spy x Family">
+                <p>Spy x Family</p>
             </div>
-        </section>
-
-        <section class="anime-list">
-            <h2>Terbaik bersama Keluarga</h2>
-            <div class="anime-grid">
-                <div class="anime-card">
-                    <img src="spy-family.jpg" alt="Spy x Family">
-                    <h3>Spy x Family</h3>
-                </div>
-                <div class="anime-card">
-                    <img src="hunter-x-hunter.jpg" alt="Hunter x Hunter">
-                    <h3>Hunter x Hunter</h3>
-                </div>
-                <div class="anime-card">
-                    <img src="jujutsu-kaisen.jpg" alt="Jujutsu Kaisen">
-                    <h3>Jujutsu Kaisen</h3>
-                </div>
-                </div>
-        </section>
-
-        <section class="anime-list">
-            <h2>Top Bulan Ini</h2>
-            <div class="anime-grid">
-                <div class="anime-card">
-                    <img src="demon-slayer.jpg" alt="Demon Slayer">
-                    <h3>Demon Slayer</h3>
-                </div>
+            <div class="card">
+                <img src="hunter-x-hunter.jpg" alt="Hunter x Hunter">
+                <p>Hunter x Hunter</p>
             </div>
-        </section>
+            <div class="card">
+                <img src="jujutsu-kaisen.jpg" alt="Jujutsu Kaisen">
+                <p>Jujutsu Kaisen</p>
+            </div>
+        </div>
+    </section>
 
-    </main>
+    <section class="top-anime">
+        <h2>Top Bulan Ini!!</h2>
+        <div class="featured-anime">
+            <img src="demon-slayer.jpg" alt="Demon Slayer: Infinity Castle">
+            <p>Demon Slayer: Infinity Castle</p>
+        </div>
+    </section>
 
     <footer>
-        <p>&copy; 2023 Anime Streaming</p>
+        <p>© 2024 AnimeKu</p>
     </footer>
 
     <script src="script.js"></script>
 </body>
-</html>
+                    </html>
+                    
