--- a/gt6.html
+++ b/gt6.html
@@ -103,8 +103,8 @@
     <div class="scrollable flex space-x-4">
       <!-- Manga Item -->
       <div class="bg-white p-4 rounded-lg shadow-lg manga-poster flex-none w-40">
-        <img src="https://example.com/manga1.jpg" alt="Manga 1" class="w-full h-40 object-cover rounded-lg mb-4">
-        <h3 class="text-lg font-medium">Judul Komik 1</h3>
+        <img src="1.jpg" alt="Manga 1" class="w-full h-40 object-cover rounded-lg mb-4">
+        <h3 class="text-lg font-medium">Jujursu Kasian</h3>
       </div>
       <div class="bg-white p-4 rounded-lg shadow-lg manga-poster flex-none w-40">
         <img src="https://example.com/manga2.jpg" alt="Manga 2" class="w-full h-40 object-cover rounded-lg mb-4">
