--- a/gt6.html
+++ b/gt6.html
@@ -30,8 +30,8 @@
     <div class="container mx-auto flex justify-between items-center">
       <!-- Logo dan Nama Situs -->
       <div class="flex items-center space-x-2">
-        <img src="https://example.com/logo.png" alt="logo" class="h-8 w-8">
-        <span class="text-xl font-semibold">MangaFusion</span>
+        <img src="logo.png" alt="logo" class="h-8 w-8">
+        
       </div>
 
       <!-- Hamburger Menu -->
