--- a/gt7.html
+++ b/gt7.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MangaFusion</title>
-  <link rel="icon" href="https://example.com/favicon.png">
+  <title>Kemono Chocomic</title>
+  <link rel="icon" href="logo.png">
   <!-- Tailwind CSS -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
@@ -112,7 +112,7 @@
   <!-- Footer Section -->
   <footer class="bg-gray-900 text-white py-4">
     <div class="container mx-auto text-center">
-      <p>&copy; 2024 MangaFusion. All rights reserved.</p>
+      <p>&copy; 2024 Kemono Chocomic. All rights reserved.</p>
       <p><a href="#" class="hover:text-gray-400">Privacy Policy</a> | <a href="#" class="hover:text-gray-400">Terms of Service</a></p>
     </div>
   </footer>
