--- a/gt7.html
+++ b/gt7.html
@@ -40,7 +40,18 @@
       <div class="flex items-center space-x-2">
         <img src="logo.png" alt="logo" class="h-8 w-8">
       </div>
-
+      
+<!-- Search Bar -->
+      <div class="flex-1 mx-4">
+        <div class="relative">
+          <input type="text" placeholder="Cari Manga" class="w-full py-2 pl-10 pr-4 rounded-full bg-gray-700 text-gray-200 focus:outline-none focus:ring-2 focus:ring-indigo-500 placeholder-gray-400">
+          <svg class="absolute left-3 top-3 h-5 w-5 text-gray-400" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M10 2a8 8 0 105.292 14.708l4.822 4.822a1 1 0 001.415-1.415l-4.822-4.822A8 8 0 0010 2zm0 2a6 6 0 110 12 6 6 0 010-12z"/>
+          </svg>
+        </div>
+      </div>
+    </div>
+    
       <!-- Hamburger Menu -->
       <div class="block md:hidden">
         <button id="hamburger" class="text-white focus:outline-none">
