--- a/gt7.html
+++ b/gt7.html
@@ -41,24 +41,26 @@
         <img src="logo.png" alt="logo" class="h-8 w-8">
       </div>
       
-<!-- Search Bar -->
-      <div class="flex-1 mx-4">
-        <div class="relative">
-          <input type="text" placeholder="Cari Manga" class="w-full py-2 pl-10 pr-4 rounded-full bg-gray-700 text-gray-200 focus:outline-none focus:ring-2 focus:ring-indigo-500 placeholder-gray-400">
-          <svg class="absolute left-3 top-3 h-5 w-5 text-gray-400" fill="currentColor" viewBox="0 0 24 24">
-            <path d="M10 2a8 8 0 105.292 14.708l4.822 4.822a1 1 0 001.415-1.415l-4.822-4.822A8 8 0 0010 2zm0 2a6 6 0 110 12 6 6 0 010-12z"/>
-          </svg>
+      <!-- Search Bar dan Hamburger Menu -->
+      <div class="flex items-center space-x-4 flex-1 justify-between">
+        <!-- Search Bar -->
+        <div class="w-full max-w-md">
+          <div class="relative">
+            <input type="text" placeholder="Cari Manga" class="w-full py-2 pl-10 pr-4 rounded-full bg-gray-700 text-gray-200 focus:outline-none focus:ring-2 focus:ring-indigo-500 placeholder-gray-400">
+            <svg class="absolute left-3 top-3 h-5 w-5 text-gray-400" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M10 2a8 8 0 105.292 14.708l4.822 4.822a1 1 0 001.415-1.415l-4.822-4.822A8 8 0 0010 2zm0 2a6 6 0 110 12 6 6 0 010-12z"/>
+            </svg>
+          </div>
         </div>
-      </div>
-    </div>
-    
-      <!-- Hamburger Menu -->
-      <div class="block md:hidden">
-        <button id="hamburger" class="text-white focus:outline-none">
-          <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
-          </svg>
-        </button>
+
+        <!-- Hamburger Menu -->
+        <div class="block md:hidden">
+          <button id="hamburger" class="text-white focus:outline-none">
+            <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+            </svg>
+          </button>
+        </div>
       </div>
 
       <!-- Menu Navigasi -->
@@ -133,7 +135,8 @@
     document.getElementById('hamburger').onclick = function() {
       document.getElementById('hamburgerMenu').classList.toggle('hidden');
     };
-    document.getElementById('hamburgerClose').onclick = function() {
+    document.getElementById('hamburgerClose').onclick
+        = function() {
       document.getElementById('hamburgerMenu').classList.add('hidden');
     };
   </script>
